Fix sidebar left-side alignment

--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -240,7 +240,7 @@
 
 .sidebar .full-list a {
   margin-right: 30px;
-  padding: 3px 0 3px 12px;
+  padding: 3px 0 3px 13px;
   border-left: var(--navTabBorderWidth) solid transparent;
   color: var(--sidebarItem);
 }
